Fix table overflowing in firefox

--- a/src/css/notice.css
+++ b/src/css/notice.css
@@ -240,32 +240,33 @@
 }
 
 .cell-width-1 {
-  width: 0.205% !important;
+  /* width: 0.205% !important; */
   color: #999999;
   overflow: visible !important;
   padding-left: 1.25% !important;
 }
 
 .cell-width-2 {
-  width: 0.6% !important;
+  /* width: 0.6% !important; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   color: #878787;
+  text-align: left !important;
 }
 
 .cell-width-3 {
-  width: 0.9% !important;
+  /* width: 0.9% !important; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-align: center;
+  text-align: left !important;
   color: #878787;
 }
 
 .cell-width-4 {
-  max-width: 2.5rem !important;
-  text-align: center;
+  /* max-width: 2.5rem !important; */
+  text-align: left !important;
   white-space: nowrap;
   box-sizing: content-box;
   overflow: hidden;
